Prevent scrollbars from appearing when dragging canvas div

--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ html, body {
     margin: 0;
 }
 
+body {
+    overflow: hidden;
+}
+
 #menu {
     display: flex;
     flex-direction: row;
